--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,7 +6,7 @@
 
   @media screen and (min-width: 480px) {
     width: 450px;
-    height: 609px;
+    height: 550px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -53,7 +53,3 @@
     transition: fill 250ms var(--time--animation);
   }
 }
-// body.modal-open {
-//   height: 100vh;
-//   overflow-y: hidden;
-// }
